--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,15 @@
     "ajv": "^6.10.2",
     "ally.js": "^1.4.1",
     "gsap": "^2.1.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-ga": "^2.6.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "react-transition-group": "^4.2.1",
-    "typescript": "^3.5.3",
-    "vanilla-lazyload": "^12.0.0"
+    "node-sass": "^4.13.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0",
+    "react-transition-group": "^4.3.0",
+    "typescript": "^3.7.4",
+    "vanilla-lazyload": "^12.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
