--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,21 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "ajv": "8.12.0",
+        "@react-three/drei": "^10.7.7",
+        "@react-three/fiber": "^9.5.0",
+        "ajv": "^8.17.1",
         "ally.js": "1.4.1",
-        "gsap": "3.11.5",
-        "node-sass": "8.0.0",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-ga": "3.3.1",
-        "react-router-dom": "6.10.0",
+        "eslint": "^10.0.0",
+        "gsap": "^3.14.2",
+        "react": "^19.2.4",
+        "react-dom": "^19.2.4",
+        "react-router-dom": "^7.13.0",
         "react-scripts": "5.0.1",
         "react-transition-group": "4.4.5",
-        "typescript": "4.9.5",
-        "vanilla-lazyload": "17.8.3"
+        "three": "^0.182.0",
+        "typescript": "^5.9.3",
+        "vanilla-lazyload": "^19.1.3"
     },
-    
     "scripts": {
         "start": "react-scripts start",
         "build": "GENERATE_SOURCEMAP=false react-scripts build",
@@ -26,16 +27,13 @@
     },
     "proxy": "http://localhost:5000",
     "engines": {
-        "npm": "9.6.3",
-        "node": "16.17.1"
+        "npm": ">=9.0.0",
+        "node": ">=18.0.0"
     },
     "browserslist": [
         ">0.2%",
         "not dead",
         "not ie <= 11",
         "not op_mini all"
-    ],
-    "peerDependencies": {
-        "eslint": "6.8.0"
-    }
+    ]
 }
