--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   },
   "keywords": [],
   "engines": {
-    "npm": "9.6.3",
-    "node": "16.17.1"
+    "npm": ">=9.0.0",
+    "node": ">=18.0.0"
 },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.2",
+    "express": "^5.2.1",
     "path": "0.12.7"
   }
 }
